--- a/arm-unknown-linux-gnueabi.config
+++ b/arm-unknown-linux-gnueabi.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# crosstool-NG 1.20.0 Configuration
-# Fri Nov 28 18:54:56 2014
+# crosstool-NG 1.21.0 Configuration
+# Wed Sep 16 01:32:09 2015
 #
 CT_CONFIGURE_has_make381=y
 CT_CONFIGURE_has_xz=y
@@ -59,7 +59,7 @@ CT_PATCH_ORDER="bundled"
 #
 # Build behavior
 #
-CT_PARALLEL_JOBS=0
+CT_PARALLEL_JOBS=2
 CT_LOAD=""
 CT_USE_PIPES=y
 CT_EXTRA_CFLAGS_FOR_BUILD=""
@@ -104,16 +104,16 @@ CT_ARCH_SUPPORTS_SOFTFP=y
 CT_ARCH_DEFAULT_HAS_MMU=y
 CT_ARCH_DEFAULT_LE=y
 CT_ARCH_DEFAULT_32=y
-CT_ARCH_ARCH="armv6"
-CT_ARCH_CPU="arm1176jzf-s"
-CT_ARCH_TUNE="arm1176jzf-s"
+CT_ARCH_ARCH="armv5te"
+CT_ARCH_CPU="arm926ej-s"
+CT_ARCH_TUNE="arm926ej-s"
 CT_ARCH_FPU="vfp"
 # CT_ARCH_BE is not set
 CT_ARCH_LE=y
 CT_ARCH_32=y
 # CT_ARCH_64 is not set
 CT_ARCH_BITNESS=32
-CT_ARCH_FLOAT_HW=y
+# CT_ARCH_FLOAT_HW is not set
 # CT_ARCH_FLOAT_SW is not set
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
@@ -123,6 +123,7 @@ CT_ARCH_arm=y
 # CT_ARCH_blackfin is not set
 # CT_ARCH_m68k is not set
 # CT_ARCH_mips is not set
+# CT_ARCH_nios2 is not set
 # CT_ARCH_powerpc is not set
 # CT_ARCH_s390 is not set
 # CT_ARCH_sh is not set
@@ -135,6 +136,7 @@ CT_ARCH_blackfin_AVAILABLE=y
 CT_ARCH_m68k_AVAILABLE=y
 CT_ARCH_microblaze_AVAILABLE=y
 CT_ARCH_mips_AVAILABLE=y
+CT_ARCH_nios2_AVAILABLE=y
 CT_ARCH_powerpc_AVAILABLE=y
 CT_ARCH_s390_AVAILABLE=y
 CT_ARCH_sh_AVAILABLE=y
@@ -153,8 +155,8 @@ CT_ARCH_ENDIAN="little"
 # Target optimisations
 #
 # CT_ARCH_FLOAT_AUTO is not set
-# CT_ARCH_FLOAT_SOFTFP is not set
-CT_ARCH_FLOAT="hard"
+CT_ARCH_FLOAT_SOFTFP=y
+CT_ARCH_FLOAT="softfp"
 
 #
 # arm other options
@@ -212,35 +214,20 @@ CT_BUILD_SUFFIX=""
 #
 CT_KERNEL_SUPPORTS_SHARED_LIBS=y
 CT_KERNEL="linux"
-CT_KERNEL_VERSION="3.15.4"
+CT_KERNEL_VERSION="4.0.4"
 # CT_KERNEL_bare_metal is not set
 CT_KERNEL_linux=y
 CT_KERNEL_bare_metal_AVAILABLE=y
 CT_KERNEL_linux_AVAILABLE=y
-CT_KERNEL_V_3_15=y
+CT_KERNEL_V_4_0=y
+# CT_KERNEL_V_3_19 is not set
+# CT_KERNEL_V_3_18 is not set
 # CT_KERNEL_V_3_14 is not set
-# CT_KERNEL_V_3_13 is not set
 # CT_KERNEL_V_3_12 is not set
-# CT_KERNEL_V_3_11 is not set
 # CT_KERNEL_V_3_10 is not set
-# CT_KERNEL_V_3_9 is not set
-# CT_KERNEL_V_3_8 is not set
-# CT_KERNEL_V_3_7 is not set
-# CT_KERNEL_V_3_6 is not set
-# CT_KERNEL_V_3_5 is not set
 # CT_KERNEL_V_3_4 is not set
-# CT_KERNEL_V_3_3 is not set
 # CT_KERNEL_V_3_2 is not set
-# CT_KERNEL_V_3_1 is not set
-# CT_KERNEL_V_3_0 is not set
-# CT_KERNEL_V_2_6_39 is not set
-# CT_KERNEL_V_2_6_38 is not set
-# CT_KERNEL_V_2_6_37 is not set
-# CT_KERNEL_V_2_6_36 is not set
-# CT_KERNEL_V_2_6_33 is not set
 # CT_KERNEL_V_2_6_32 is not set
-# CT_KERNEL_V_2_6_31 is not set
-# CT_KERNEL_V_2_6_27 is not set
 # CT_KERNEL_LINUX_CUSTOM is not set
 CT_KERNEL_windows_AVAILABLE=y
 
@@ -252,10 +239,10 @@ CT_SHARED_LIBS=y
 #
 # linux other options
 #
-CT_KERNEL_LINUX_VERBOSITY_0=y
+# CT_KERNEL_LINUX_VERBOSITY_0 is not set
 # CT_KERNEL_LINUX_VERBOSITY_1 is not set
-# CT_KERNEL_LINUX_VERBOSITY_2 is not set
-CT_KERNEL_LINUX_VERBOSE_LEVEL=0
+CT_KERNEL_LINUX_VERBOSITY_2=y
+CT_KERNEL_LINUX_VERBOSE_LEVEL=2
 CT_KERNEL_LINUX_INSTALL_CHECK=y
 
 #
@@ -268,6 +255,11 @@ CT_BINUTILS_binutils=y
 #
 # GNU binutils
 #
+# CT_CC_BINUTILS_SHOW_LINARO is not set
+# CT_BINUTILS_V_2_25 is not set
+# CT_BINUTILS_V_2_24 is not set
+# CT_BINUTILS_V_2_23_2 is not set
+# CT_BINUTILS_V_2_23_1 is not set
 # CT_BINUTILS_V_2_22 is not set
 # CT_BINUTILS_V_2_21_53 is not set
 CT_BINUTILS_V_2_21_1a=y
@@ -302,14 +294,15 @@ CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 # C-library
 #
 CT_LIBC="glibc"
-CT_LIBC_VERSION="2.13"
-# CT_LIBC_eglibc is not set
+CT_LIBC_VERSION="2.9"
 CT_LIBC_glibc=y
 # CT_LIBC_musl is not set
 # CT_LIBC_uClibc is not set
-CT_LIBC_eglibc_AVAILABLE=y
-CT_THREADS="nptl"
 CT_LIBC_glibc_AVAILABLE=y
+CT_THREADS="nptl"
+# CT_CC_GLIBC_SHOW_LINARO is not set
+# CT_LIBC_GLIBC_V_2_21 is not set
+# CT_LIBC_GLIBC_V_2_20 is not set
 # CT_LIBC_GLIBC_V_2_19 is not set
 # CT_LIBC_GLIBC_V_2_18 is not set
 # CT_LIBC_GLIBC_V_2_17 is not set
@@ -317,13 +310,13 @@ CT_LIBC_glibc_AVAILABLE=y
 # CT_LIBC_GLIBC_V_2_15 is not set
 # CT_LIBC_GLIBC_V_2_14_1 is not set
 # CT_LIBC_GLIBC_V_2_14 is not set
-CT_LIBC_GLIBC_V_2_13=y
+# CT_LIBC_GLIBC_V_2_13 is not set
 # CT_LIBC_GLIBC_V_2_12_2 is not set
 # CT_LIBC_GLIBC_V_2_12_1 is not set
 # CT_LIBC_GLIBC_V_2_11_1 is not set
 # CT_LIBC_GLIBC_V_2_11 is not set
 # CT_LIBC_GLIBC_V_2_10_1 is not set
-# CT_LIBC_GLIBC_V_2_9 is not set
+CT_LIBC_GLIBC_V_2_9=y
 # CT_LIBC_GLIBC_V_2_8 is not set
 CT_LIBC_mingw_AVAILABLE=y
 CT_LIBC_musl_AVAILABLE=y
@@ -338,6 +331,10 @@ CT_LIBC_SUPPORT_THREADS_NATIVE=y
 #
 CT_THREADS_NATIVE=y
 CT_LIBC_XLDD=y
+
+#
+# glibc other options
+#
 CT_LIBC_GLIBC_PORTS_EXTERNAL=y
 CT_LIBC_GLIBC_MAY_FORCE_PORTS=y
 CT_LIBC_glibc_familly=y
@@ -350,15 +347,6 @@ CT_LIBC_OLDEST_ABI=""
 CT_LIBC_GLIBC_FORCE_UNWIND=y
 CT_LIBC_GLIBC_USE_PORTS=y
 CT_LIBC_ADDONS_LIST=""
-# CT_LIBC_LOCALES is not set
-# CT_LIBC_GLIBC_KERNEL_VERSION_NONE is not set
-CT_LIBC_GLIBC_KERNEL_VERSION_AS_HEADERS=y
-# CT_LIBC_GLIBC_KERNEL_VERSION_CHOSEN is not set
-CT_LIBC_GLIBC_MIN_KERNEL="3.15.4"
-
-#
-# glibc other options
-#
 
 #
 # WARNING !!!                                            
@@ -379,20 +367,28 @@ CT_LIBC_GLIBC_MIN_KERNEL="3.15.4"
 #
 #   or try again later... :-(                            
 #
+# CT_LIBC_LOCALES is not set
+# CT_LIBC_GLIBC_KERNEL_VERSION_NONE is not set
+CT_LIBC_GLIBC_KERNEL_VERSION_AS_HEADERS=y
+# CT_LIBC_GLIBC_KERNEL_VERSION_CHOSEN is not set
+CT_LIBC_GLIBC_MIN_KERNEL="4.0.4"
 
 #
 # C compiler
 #
 CT_CC="gcc"
-CT_CC_VERSION="4.8.3"
+CT_CC_VERSION="4.2.4"
 CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_CORE_PASS_1_NEEDED=y
 CT_CC_CORE_PASS_2_NEEDED=y
 CT_CC_gcc=y
 # CT_CC_GCC_SHOW_LINARO is not set
+# CT_CC_V_5_1 is not set
+# CT_CC_V_4_9_2 is not set
 # CT_CC_V_4_9_1 is not set
 # CT_CC_V_4_9_0 is not set
-CT_CC_V_4_8_3=y
+# CT_CC_V_4_8_4 is not set
+# CT_CC_V_4_8_3 is not set
 # CT_CC_V_4_8_2 is not set
 # CT_CC_V_4_8_1 is not set
 # CT_CC_V_4_8_0 is not set
@@ -424,27 +420,12 @@ CT_CC_V_4_8_3=y
 # CT_CC_V_4_3_3 is not set
 # CT_CC_V_4_3_2 is not set
 # CT_CC_V_4_3_1 is not set
-# CT_CC_V_4_2_4 is not set
+CT_CC_V_4_2_4=y
 # CT_CC_V_4_2_2 is not set
+CT_CC_GCC_4_2=y
 CT_CC_GCC_4_2_or_later=y
-CT_CC_GCC_4_3_or_later=y
-CT_CC_GCC_4_4_or_later=y
-CT_CC_GCC_4_5_or_later=y
-CT_CC_GCC_4_6_or_later=y
-CT_CC_GCC_4_7_or_later=y
-CT_CC_GCC_4_8=y
-CT_CC_GCC_4_8_or_later=y
-CT_CC_GCC_HAS_GRAPHITE=y
-CT_CC_GCC_USE_GRAPHITE=y
-CT_CC_GCC_HAS_LTO=y
+# CT_CC_GCC_USE_GRAPHITE is not set
 CT_CC_GCC_USE_LTO=y
-CT_CC_GCC_HAS_PKGVERSION_BUGURL=y
-CT_CC_GCC_HAS_BUILD_ID=y
-CT_CC_GCC_HAS_LNK_HASH_STYLE=y
-CT_CC_GCC_USE_GMP_MPFR=y
-CT_CC_GCC_USE_MPC=y
-CT_CC_GCC_HAS_LIBQUADMATH=y
-CT_CC_GCC_HAS_LIBSANITIZER=y
 # CT_CC_LANG_FORTRAN is not set
 CT_CC_SUPPORT_CXX=y
 CT_CC_SUPPORT_FORTRAN=y
@@ -452,12 +433,11 @@ CT_CC_SUPPORT_JAVA=y
 CT_CC_SUPPORT_ADA=y
 CT_CC_SUPPORT_OBJC=y
 CT_CC_SUPPORT_OBJCXX=y
-CT_CC_SUPPORT_GOLANG=y
 
 #
 # Additional supported languages:
 #
-CT_CC_LANG_CXX=y
+# CT_CC_LANG_CXX is not set
 # CT_CC_LANG_JAVA is not set
 
 #
@@ -466,7 +446,6 @@ CT_CC_LANG_CXX=y
 CT_CC_ENABLE_CXX_FLAGS=""
 CT_CC_CORE_EXTRA_CONFIG_ARRAY=""
 CT_CC_EXTRA_CONFIG_ARRAY=""
-# CT_CC_STATIC_LIBSTDCXX is not set
 # CT_CC_GCC_SYSTEM_ZLIB is not set
 
 #
@@ -476,12 +455,10 @@ CT_CC_EXTRA_CONFIG_ARRAY=""
 #
 # Settings for libraries running on target
 #
-CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
+# CT_CC_GCC_ENABLE_TARGET_OPTSPACE is not set
 # CT_CC_GCC_LIBMUDFLAP is not set
 # CT_CC_GCC_LIBGOMP is not set
 # CT_CC_GCC_LIBSSP is not set
-# CT_CC_GCC_LIBQUADMATH is not set
-# CT_CC_GCC_LIBSANITIZER is not set
 
 #
 # Misc. obscure options.
@@ -490,12 +467,10 @@ CT_CC_CXA_ATEXIT=y
 # CT_CC_GCC_DISABLE_PCH is not set
 CT_CC_GCC_SJLJ_EXCEPTIONS=m
 CT_CC_GCC_LDBL_128=m
-# CT_CC_GCC_BUILD_ID is not set
-CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
+# CT_CC_GCC_LNK_HASH_STYLE_DEFAULT is not set
 # CT_CC_GCC_LNK_HASH_STYLE_SYSV is not set
 # CT_CC_GCC_LNK_HASH_STYLE_GNU is not set
 # CT_CC_GCC_LNK_HASH_STYLE_BOTH is not set
-CT_CC_GCC_LNK_HASH_STYLE=""
 CT_CC_GCC_DEC_FLOAT_AUTO=y
 # CT_CC_GCC_DEC_FLOAT_BID is not set
 # CT_CC_GCC_DEC_FLOAT_DPD is not set
@@ -513,59 +488,33 @@ CT_CC_GCC_DEC_FLOAT_AUTO=y
 #
 # Companion libraries
 #
-CT_COMPLIBS_NEEDED=y
-CT_GMP_NEEDED=y
-CT_MPFR_NEEDED=y
-CT_ISL_NEEDED=y
-CT_CLOOG_NEEDED=y
-CT_MPC_NEEDED=y
-CT_COMPLIBS=y
-CT_GMP=y
-CT_MPFR=y
-CT_ISL=y
-CT_CLOOG=y
-CT_MPC=y
+# CT_GMP_V_6_0_0 is not set
 # CT_GMP_V_5_1_3 is not set
 # CT_GMP_V_5_1_1 is not set
-CT_GMP_V_5_0_2=y
+# CT_GMP_V_5_0_2 is not set
 # CT_GMP_V_5_0_1 is not set
 # CT_GMP_V_4_3_2 is not set
 # CT_GMP_V_4_3_1 is not set
 # CT_GMP_V_4_3_0 is not set
-CT_GMP_VERSION="5.0.2"
 # CT_MPFR_V_3_1_2 is not set
-CT_MPFR_V_3_1_0=y
+# CT_MPFR_V_3_1_0 is not set
 # CT_MPFR_V_3_0_1 is not set
 # CT_MPFR_V_3_0_0 is not set
 # CT_MPFR_V_2_4_2 is not set
 # CT_MPFR_V_2_4_1 is not set
 # CT_MPFR_V_2_4_0 is not set
-CT_MPFR_VERSION="3.1.0"
-# CT_PPL_V_0_11_2 is not set
-# CT_PPL_V_0_11_1 is not set
-# CT_PPL_V_0_11 is not set
-# CT_PPL_V_0_10_2 is not set
-CT_ISL_V_0_12_2=y
+# CT_ISL_V_0_14 is not set
+# CT_ISL_V_0_12_2 is not set
 # CT_ISL_V_0_11_1 is not set
-CT_ISL_VERSION="0.12.2"
-CT_CLOOG_V_0_18_1=y
+# CT_CLOOG_V_0_18_1 is not set
 # CT_CLOOG_V_0_18_0 is not set
-# CT_CLOOG_V_0_15_11 is not set
-CT_CLOOG_VERSION="0.18.1"
-CT_CLOOG_0_18_or_later=y
 # CT_MPC_V_1_0_2 is not set
 # CT_MPC_V_1_0_1 is not set
 # CT_MPC_V_1_0 is not set
-CT_MPC_V_0_9=y
+# CT_MPC_V_0_9 is not set
 # CT_MPC_V_0_8_2 is not set
 # CT_MPC_V_0_8_1 is not set
 # CT_MPC_V_0_7 is not set
-CT_MPC_VERSION="0.9"
-
-#
-# Companion libraries common options
-#
-# CT_COMPLIBS_CHECK is not set
 
 #
 # Companion tools
